{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 23,
  "lineage": "1ae89e20-1dca-c07e-0bdd-4c9abe1562d9",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "qa_manager_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:410865591329:instance/i-048dd81f8c9f9ab8a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048dd81f8c9f9ab8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8402c8db30c6c5c",
            "private_dns": "ip-10-0-0-101.eu-west-2.compute.internal",
            "private_ip": "10.0.0.101",
            "public_dns": "ec2-3-8-5-251.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.5.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c25217eafcef249",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0baa5d43e4e32a8ec",
            "tags": {
              "Name": "manager-node",
              "Task": "Project"
            },
            "tags_all": {
              "Name": "manager-node",
              "Task": "Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0530e0dac489a57c2"
            ]
          },
          "dependencies": [
            "module.Security_Group.aws_security_group.Proj-SG",
            "module.Subnet.aws_subnet.Proj-SNs"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Proj-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:410865591329:security-group/sg-0530e0dac489a57c2",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0530e0dac489a57c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "410865591329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh",
              "Task": "Project"
            },
            "tags_all": {
              "Name": "allow_ssh",
              "Task": "Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1d0e53f4e80d33e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.Proj-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Proj-SNs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:410865591329:subnet/subnet-0baa5d43e4e32a8ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baa5d43e4e32a8ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "410865591329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proj-sn",
              "Task": "Project",
              "kubernetes.io/cluster/qa_cluster": "shared"
            },
            "tags_all": {
              "Name": "proj-sn",
              "Task": "Project",
              "kubernetes.io/cluster/qa_cluster": "shared"
            },
            "vpc_id": "vpc-0e1d0e53f4e80d33e"
          },
          "dependencies": [
            "module.Subnet.data.aws_availability_zones.available",
            "module.VPC.aws_vpc.Proj-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:410865591329:subnet/subnet-080979477b38da3ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080979477b38da3ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "410865591329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proj-sn",
              "Task": "Project",
              "kubernetes.io/cluster/qa_cluster": "shared"
            },
            "tags_all": {
              "Name": "proj-sn",
              "Task": "Project",
              "kubernetes.io/cluster/qa_cluster": "shared"
            },
            "vpc_id": "vpc-0e1d0e53f4e80d33e"
          },
          "dependencies": [
            "module.Subnet.data.aws_availability_zones.available",
            "module.VPC.aws_vpc.Proj-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Proj-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:410865591329:vpc/vpc-0e1d0e53f4e80d33e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088774a65d3f251bf",
            "default_route_table_id": "rtb-0cce9cd8ce0a8102e",
            "default_security_group_id": "sg-047a4e82c8a8f60de",
            "dhcp_options_id": "dopt-0e2125c14f0d37cd3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e1d0e53f4e80d33e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cce9cd8ce0a8102e",
            "owner_id": "410865591329",
            "tags": {
              "Name": "proj-vpc",
              "Task": "Project"
            },
            "tags_all": {
              "Name": "proj-vpc",
              "Task": "Project"
            }
          }
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Proj-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:410865591329:internet-gateway/igw-02cf7c0b0ce962a7a",
            "id": "igw-02cf7c0b0ce962a7a",
            "owner_id": "410865591329",
            "tags": {
              "Name": "Proj-IGW",
              "Task": "Project"
            },
            "tags_all": {
              "Name": "Proj-IGW",
              "Task": "Project"
            },
            "vpc_id": "vpc-0e1d0e53f4e80d33e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.Proj-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Proj-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:410865591329:route-table/rtb-05c65d331f953d692",
            "id": "rtb-05c65d331f953d692",
            "owner_id": "410865591329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cf7c0b0ce962a7a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Proj-RT",
              "Task": "Project"
            },
            "tags_all": {
              "Name": "Proj-RT",
              "Task": "Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1d0e53f4e80d33e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.Proj-VPC",
            "module.igw.aws_internet_gateway.Proj-IGW"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Proj-RTAA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b79c3da59d3f12c",
            "route_table_id": "rtb-05c65d331f953d692",
            "subnet_id": "subnet-0baa5d43e4e32a8ec"
          },
          "dependencies": [
            "module.Subnet.aws_subnet.Proj-SNs",
            "module.Subnet.data.aws_availability_zones.available",
            "module.VPC.aws_vpc.Proj-VPC",
            "module.igw.aws_internet_gateway.Proj-IGW",
            "module.igw.aws_route_table.Proj-RT"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Proj-RTAB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c2a103c551986df",
            "route_table_id": "rtb-05c65d331f953d692",
            "subnet_id": "subnet-080979477b38da3ae"
          },
          "dependencies": [
            "module.Subnet.aws_subnet.Proj-SNs",
            "module.Subnet.data.aws_availability_zones.available",
            "module.VPC.aws_vpc.Proj-VPC",
            "module.igw.aws_internet_gateway.Proj-IGW",
            "module.igw.aws_route_table.Proj-RT"
          ]
        }
      ]
    }
  ]
}